# gshell

./: .gitignore  :w  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: shell_bench.rs
docs/: SPEC.md  configuration.md  install.md  release-checklist.md
docs/implementation-plan/phase-1/: board.md  meaning.md
docs/implementation-plan/phase-2/: board.md  meaning.md
docs/implementation-plan/phase-3/: board.md  meaning.md
docs/implementation-plan/phase-4/: board.md  meaning.md
packaging/homebrew/: gshell.rb.in
scripts/: render-homebrew-formula.sh
src/: argvec.c  argvec.h  command.c  command.h  commands.c  commands.h  completition_flow.c  completition_flow.h  dynbuf.c  dynbuf.h  error.c  error.h  execute.c  execute.h  fs.c  fs.h  helpers.c  helpers.h  history.c  history.h  lib.rs  linenoise.c  linenoise.h  linenoise_setup.c  linenoise_setup.h  main.c  main.rs  multi_completions.c  multi_completions.h  panic.c  panic.h  parser.c  parser.h  pipeline.c  pipeline.h  redirect.c  redirect.h  rehash.c  rehash.h  test  (+4 more)
src/ast/: mod.rs
src/builtins/: alias.rs  cd.rs  clear.rs  echo.rs  exit.rs  export.rs  history.rs  jobs.rs  mod.rs  pwd.rs  source.rs  type.rs  unalias.rs
src/compat/: mod.rs
src/completion/: mod.rs
src/config/: mod.rs
src/expand/: mod.rs
src/history/: mod.rs
src/jobs/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/prompt/: mod.rs
src/runtime/: mod.rs  unix.rs
src/shell/: error.rs  mod.rs  state.rs  types.rs
src/ui/: highlighter.rs  mod.rs  validator.rs
tests/: aliases.rs  builtins.rs  cli.rs  command_substitution.rs  compat_advanced.rs  composition.rs  expand.rs  expansion_integration.rs  external.rs  functions.rs  history.rs  jobs.rs  parser.rs  redirection.rs  repl.rs  smoke.rs  validator.rs
