[package]
name = "gshell"
version = "0.1.0"
edition = "2024"
description = "gshell is a shell for people who live in the terminal. It pairs familiar Unix behavior with a tighter core, fast interaction, and an interface built to stay out of the way."
license = "MIT"

[dependencies]
anyhow = "1.0.102"
reedline = "0.46.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
expectrl = "0.7.0"
tempfile = "3.27.0"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
unsafe_code = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
