[package]
name = "gshell"
version = "1.0.3"
edition = "2024"
rust-version = "1.85"
description = "gshell is a shell for people who live in the terminal. It pairs familiar Unix behavior with a tighter core, fast interaction, and an interface built to stay out of the way."
license = "MIT"
readme = "README.md"
repository = "https://github.com/emagjby/gshell"
homepage = "https://github.com/emagjby/gshell"
documentation = "https://github.com/emagjby/gshell/tree/main/docs"
keywords = ["shell", "terminal", "cli", "unix"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "tests/**/*",
    "benches/**/*",
    ".github/workflows/*.yml",
    "docs/**/*",
    "packaging/**/*",
    "scripts/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
    "Makefile",
    "rust-toolchain.toml",
    "rustfmt.toml",
]

[dependencies]
anyhow = "1.0.102"
nix = { version = "0.30.1", features = ["process", "signal", "term"] }
nu-ansi-term = "0.50.3"
reedline = "0.46.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
expectrl = "0.7.0"
tempfile = "3.27.0"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
unsafe_code = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"

[[bench]]
name = "shell_bench"
harness = false
